# study-devicewise-poetry-management

./: README.md  main.py
env1/: pyproject.toml
env2/: pyproject.toml
